--- a/styles/c6_speaker.css
+++ b/styles/c6_speaker.css
@@ -52,13 +52,14 @@ section {
 	padding: 0 20px 20px 20px;
 }
 section h1 {
+	color: #800000;
 	font-size: 150%;
-	padding: .5em 0 .25em 0;
+	padding: .5em 0 0 0;
 	margin: 0;
 }
 section h2 {
-	color: #800000;
-	font-size: 130%;
+	color: black;
+	font-size: 120%;
 	padding: .5em 0 .25em 0;
 }
 section p {
@@ -78,8 +79,6 @@ section li {
 /* the styles for the article */
 article {
 	padding: .5em 0;
-	border-top: 2px solid #800000;
-	border-bottom: 2px solid #800000;
 }
 article h2 {
 	padding-top: 0;
@@ -90,7 +89,7 @@ article h3 {
 }
 article img {
 	float: right;
-	margin: .5em 0 1em 1em;
+	margin: .5em 0 2em 1em;
 	border: 1px solid black;
 }
 
