--- a/styles/c6_main.css
+++ b/styles/c6_main.css
@@ -113,6 +113,11 @@ aside {
 	float: right;
 	padding: 0 0 20px 20px;
 }
+aside h1 {
+	color: #800000;
+	font-size: 130%;
+	padding: .5em 0 .25em 0;
+}
 aside h2 {
 	color: #800000;
 	font-size: 130%;
